2013-04-19  Benjamin Poulain  <bpoulain@apple.com>

        Rename JSStringJoiner::build() to join()
        https://bugs.webkit.org/show_bug.cgi?id=114845

        Reviewed by Geoffrey Garen.

        The method name build() came from StringBuilder history. It does not make much
        sense on the StringJoiner.

        * runtime/ArrayPrototype.cpp:
        (JSC::arrayProtoFuncToString):
        (JSC::arrayProtoFuncToLocaleString):
        (JSC::arrayProtoFuncJoin):
        * runtime/JSStringJoiner.cpp:
        (JSC::JSStringJoiner::join):
        * runtime/JSStringJoiner.h:
        (JSStringJoiner):

2013-04-19  Roger Fong  <roger_fong@apple.com>

        Unreviewed. WebKit_Source is incorrectly set.

        * JavaScriptCore.vcxproj/JavaScriptCore.make:

2013-04-19  Martin Robinson  <mrobinson@igalia.com>

        [GTK] JSCore.gir.in has a few problems
        https://bugs.webkit.org/show_bug.cgi?id=114710

        Reviewed by Philippe Normand.

        * GNUmakefile.am: Add the gobject introspection steps for JavaScriptCore here,
        because they are shared between WebKit1 and WebKit2.
        * JavaScriptCore.gir.in: Added. Moved from the WebKit1 directory. Now written
        as foreign interfaces and referencing the javascriptcoregtk library.

2013-04-18  Benjamin Poulain  <bpoulain@apple.com>

        Use StringJoiner to create the JSString of arrayProtoFuncToString
        https://bugs.webkit.org/show_bug.cgi?id=114779

        Reviewed by Geoffrey Garen.

        The function arrayProtoFuncToString was just a glorified JSStringJoiner.
        This patch replaces it by JSStringJoiner to simplify the code and enjoy any optimization
        made on JSStringJoiner.

        For some reason, this makes the execution 3.4% faster, despite having almost identical code.

        * runtime/ArrayPrototype.cpp:
        (JSC::arrayProtoFuncToString):

2013-04-18  Oliver Hunt  <oliver@apple.com>

        StackFrame::column() returning bogus value