@@ -1,7 +1,6 @@
 @echo off
 
 set PrivateHeadersDirectory=%CONFIGURATIONBUILDDIR%\include\private
-set WTF_Directory=%Webkit_Source%\WTF
 
 if "%1" EQU "clean" goto :clean
 if "%1" EQU "rebuild" call :clean
@@ -15,7 +14,7 @@ for %%d in (
     wtf\unicode\icu
 ) do (
     mkdir "%PrivateHeadersDirectory%\%%d" 2>NUL
-    xcopy /y /d %Webkit_Source%\WTF\%%d\*.h "%PrivateHeadersDirectory%\%%d" >NUL
+    xcopy /y /d ..\%%d\*.h "%PrivateHeadersDirectory%\%%d" >NUL
 )
 
 echo Copying other files...
@@ -26,7 +25,7 @@ for %%f in (
     wtf\text\StringImpl.cpp
     wtf\text\WTFString.cpp
 ) do (
-    echo F | xcopy /y /d %WTF_Directory%\%%f "%PrivateHeadersDirectory%\%%f" >NUL
+    echo F | xcopy /y /d ..\%%f "%PrivateHeadersDirectory%\%%f" >NUL
 )
 
 goto :EOF
